--- a/resources/public/css/codemirror.css
+++ b/resources/public/css/codemirror.css
@@ -1,3 +1,9 @@
+.com-rigsomelight-devcards-typog.com-rigsomelight-rendered-edn > * {
+  justify-content: center;
+  font-size: 24px;
+}
+
+
 /* BASICS */
 
 .CodeMirror {
@@ -5,7 +11,6 @@
   border-radius: 5px;
   font-family: monospace;
   color: black;
-  width: 800px;
   border: gray 1px solid;
   font-size: 24px;
   margin-bottom: 15px;
